@@ -1,18 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX trivdm-0_p20110921 2319 RMD160 d5ea44d05528ee0d6d3a6f27d8bb00bd513fce5d SHA1 21cb08d686d6c9c8cb157660f903e9ae2e496b01 SHA256 eae817ac58331265e5f73c7d154e14524b90417a3560c826da4b55b49fe95a42
-AUX trivdm-0_p20110927 2435 RMD160 7430356d28715ee4062d434da4fd18f1df9c79b1 SHA1 b8b11db1314ab9404e8bcafc9c86b3cab39cab85 SHA256 33e54114644860dc4aced2935e72d0188f016dbff5191f3fde4e70dbbb380cc6
-AUX trivdm-0_p20111010 2563 RMD160 b2e376c89eaae8ea2e4ed97627abb989f2d08b6e SHA1 c09676bafd6c3d8b5ecc0da300b4dfb5dd1c914d SHA256 ba60fd9c8b87632b2fe1ec63dbdaad0ebf8c9db035a9e746cafd67f265c2ee04
-EBUILD trivdm-0_p20110921.ebuild 1372 RMD160 e03319f38b7e6d5398b7d9ad70f19cecefa4bb98 SHA1 4d9946e7c0ff322e9600526be021151dc9ab8347 SHA256 28a5980ee288a5dff6ca820da6272567ff841d61bafd35f9a29b0b42c7025135
-EBUILD trivdm-0_p20110927.ebuild 1430 RMD160 25be98eeb10527e26be5126aabe585cbbed68318 SHA1 794da6899cd0b6c883141e574dee65759287dbfa SHA256 ad040c7033142c823ca27c66b392e6371f6afd8af5c45d170720001779226113
-EBUILD trivdm-0_p20111010.ebuild 1686 RMD160 032c3bdeabdaed07f71eebd52894607907d5f2f8 SHA1 b9a954ab3e1a7da070fa92720b35d8c27cdc38c5 SHA256 d6df9c06e74c8f478769ab4214ac30d69fe3805d46f07100c9966201e2add920
-MISC ChangeLog 637 RMD160 078203c7eca39c9fd6000ec9c6107876d754fd90 SHA1 de8ef89f74a895fa4357a573043665f752239529 SHA256 4e34b8a54dc904fade2f4fe278d9792b59bbc8d00fe54c8759af2209b8cfcd12
+AUX trivdm-0_p20120321 2538 RMD160 78335c20844ac5ff8e351a72a37356d5bfd99b3a SHA1 10dbbedd2bf58e0ab06cf7f7fedfc38dcfe53e33 SHA256 64a4639913c9370e3f6fb28e244118da272b1382d3ad592d6fe9c8458c531abc
+EBUILD trivdm-0_p20120321.ebuild 1716 RMD160 49eebd9c396245e593c826a5b113f13e1ac23eae SHA1 96009deaa3d5cb184a40cc8ca0ef78e8d2fb852c SHA256 f3a860912c37d5d51520c0aa725dac6a993631992be535c268c51b20c7b753c4
+MISC ChangeLog 1008 RMD160 2d1950fb8d96b8a9e6ae581f5c406e60c2ccb0b4 SHA1 04e9a8ef87908ea7397333bede0136a06ea192dc SHA256 d163bb1a825a656efdb37d5e6b89a37b24ba5e66b8dc804376affbd8f533716a
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk6Ta68ACgkQknrdDGLu8JD8pwEAgklGWIj3msJQXNHv9mvCrDqK
-xBRNleX5buDk8Kz36F8BAIjw0TYjU9bc9zTtA37497uaBNMdnK0RXvrrpk7EziBx
-=ndJj
+iF4EAREIAAYFAk9qMskACgkQknrdDGLu8JAuvgEAmyUqT3+fCKwJyKh4xzmNkuln
+UIQm3r1cCklTEU6Qh1cA/jAfVdg5agKe0Z/lc661IKE3zsd4fnHmpOOJA5FWrcr8
+=lYKQ
 -----END PGP SIGNATURE-----
