@@ -1,8 +1,8 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=3
+EAPI=4
 
 inherit eutils
 
@@ -15,11 +15,14 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND="app-misc/toilet
+RDEPEND="app-admin/sudo
+	app-misc/toilet
 	app-shells/zsh
 	sys-apps/daemonize
 	sys-apps/kbd"
 DEPEND=""
+
+S=${WORKDIR}
 
 pkg_setup() {
 	enewgroup ${PN}
@@ -28,22 +31,26 @@ pkg_setup() {
 
 src_install() {
 	newbin "${FILESDIR}"/${P} ${PN} || die
+	dodir /etc/env.d || die
+	echo "CONFIG_PROTECT=\"/usr/bin/${PN}\"" \
+		> "${D}"/etc/env.d/90${PN} || die
+	dodir /etc/sudoers.d || die
+	echo "#${PN} ALL=(root) NOPASSWD: /sbin/reboot,/sbin/halt" \
+		> "${D}"/etc/sudoers.d/${PN} || die
+	chmod 0440 "${D}"/etc/sudoers.d/${PN} || die
 }
 
 pkg_preinst() {
-	dodir /etc || die
-	local myinit=$(sed -n -e '/c7:/{s/^.*c7:/c7:/ ; s:/local/:/: ; p}' \
-		"${ED}"/usr/bin/${PN})
-	sed -e "/^c7:/d" \
-		-e "\$a$myinit\\" \
-		/etc/inittab > "${ED}"/etc/inittab || die
+	sed -e "/^c7:/d" /etc/inittab > "${ED}"/etc/inittab || die
+	sed -n -e '/c7:/{s/^.*c7:/c7:/ ; s:/local/:/: ; p}' \
+		"${ED}"/usr/bin/${PN} >> "${ED}"/etc/inittab || die
 
 	elog "IMPORTANT NOTE"
 	elog "Your system needs 5 minor adjustments that"
 	elog "must not be made by Gentoo portage system:"
-	elog "1) enable xscreensaver->newlogin comartibility"
+	elog "1) enable xscreensaver->newlogin compartibility"
 	elog "    ln -s ../../bin/${PN} /usr/local/bin/gdmflexiserver"
-	elog "2) tune w to display remote login sessions and daeonized X11"
+	elog "2) tune w to display remote login sessions and daemonized X11"
 	elog "    ln -s ../../bin/${PN} /usr/local/bin/w"
 	elog "3) set a fancy font on framebuffer console on startup"
 	elog "    ln -s ../../usr/bin/${PN} /etc/local.d/${PN}.start"
@@ -51,4 +58,5 @@ pkg_preinst() {
 	elog "    chmod u+s /usr/bin/chvt"
 	elog "5) updated /etc/inittab (etc-update, ...) and reload"
 	elog "    kill -HUP 1"
+	elog "Install app-admin/sudo and review /etc/sudoers.d/${PN}"
 }
